--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,8 +22,8 @@ nav:
     - LaTeX/chap3.md  # LaTeXの基本(2)
     - LaTeX/chap4.md  # 数式
     - LaTeX/chap5.md  # 画像
-    # - LaTeX/chap6.md
-    - LaTeX/chap7.md # 提出課題
+    - LaTeX/chap6.md  # 付録
+    - LaTeX/chap7.md  # 提出課題
 #theme
 theme: 
   language: ja
