--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,6 @@ extra_javascript:
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 extra_css:
-  - stylesheets/codeblock.css
   - stylesheets/headline.css
 
 markdown_extensions:
@@ -76,8 +75,7 @@ markdown_extensions:
   - pymdownx.highlight:
       use_pygments: true
       noclasses: true
-      pygments_style: github-dark
-      linenums: true
+      anchor_linenums: true
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
